--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
         <footer>
             This project was coded by
-            <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
+            <a href="https://github.com/Morelite/" target="_blank"> Morelite Mupwanyiwa</a>,
             is
-            <a href="https://github.com/matthieua/meteo" target="_blank">open-sourced on GitHub</a>
+            <a href="https://github.com/Morelite/Molly/" target="_blank">open-sourced on GitHub</a>
             and
-            <a href="https://meteo-shecodes-app.netlify.app/" target="_blank">hosted on Netlify</a>
+            <a href="https://morelite-weather-app.netlify.app/" target="_blank">hosted on Netlify</a>
         </footer>
     </div>
     <script src="src/index.js"></script>
