--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <title>Meteo App</title>
+    <title>Molly weather app project</title>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
             This project was coded by
             <a href="https://github.com/Morelite/" target="_blank"> Morelite Mupwanyiwa</a>,
             is
-            <a href="https://github.com/Morelite/Molly/" target="_blank">open-sourced on GitHub</a>
+            <a href="https://github.com/Morelite/Molly-weather-app" target="_blank">open-sourced on GitHub</a>
             and
             <a href="https://morelite-weather-app.netlify.app/" target="_blank">hosted on Netlify</a>
         </footer>
