--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <title>Molly weather project</title>
   </head>
   <body>
+    <video autoplay muted loop id="background-video">
+      <source src="c:\Users\Molly Laptop\Downloads\video.mp4.mp4" >
+    </video>
+    <div class="container">
+    </div>
     <div class="weather-app">
       <header>
         <form class="search-form" id="search-form">
