--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Molly weather project</title>
   </head>
   <body>
-    <video autoplay muted loop id="background-video">
-      <source src="c:\Users\Molly Laptop\Downloads\video.mp4.mp4" >
+    <video autoplay muted loop id="background-video" >
+      <source src="src/video.mp4.mp4 " >
     </video>
     <div class="container">
     </div>
