--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <title>Molly weather project</title>
   </head>
   <body>
-    <video autoplay muted loop id="background-video" >
-      <source src="src/video.mp4.mp4 " >
+    <video autoplay muted loop id="background-video"  >
+      <source src="src/video.mp4.mp4" type="video/mp4" >
     </video>
-    <div class="container">
+    <div class="container"> 
     </div>
     <div class="weather-app">
       <header>
